--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Silya</title>
+    <title>LUSTER</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
